added icons, added mezzanine creator to frontpage

--- a/.env
+++ b/.env
@@ -42,7 +42,7 @@ ADMIN_APIKEY='FHAOFNEOVOEHNO1023'
 # Graphql Endpoint
 
 GQL_HOST='http://example.com:8087/v1/graphql'
-GQL_HEADERS=''
+GQL_HEADERS='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'
 
 # Keycloak Credentials
 
